<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.menno_000.mrpotatohead.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:contentDescription="@string/bodydesc"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/arms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/armsdesc"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/ears"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/earsdesc"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/eyebrows"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/eyebrowsdesc"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/eyes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/eyesdesc"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/glasses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/glassesdesc"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/hat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/hatdesc"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/mouth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/mouthdesc"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/mustache"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/mustachedesc"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/nose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/nosedesc"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/shoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/shoesdesc"
            app:srcCompat="@drawable/shoes" />

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/command"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/armsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"/>

            <CheckBox
                android:id="@+id/earsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"/>

            <CheckBox
                android:id="@+id/eyebrowsBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/eyesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes" />

            <CheckBox
                android:id="@+id/glassesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses"/>

            <CheckBox
                android:id="@+id/hatBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"/>

            <CheckBox
                android:id="@+id/mouthBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/mustacheBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"/>

            <CheckBox
                android:id="@+id/noseBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"/>

            <CheckBox
                android:id="@+id/shoesBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/fullyDressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullyDressed" />

        <Button
            android:id="@+id/potato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potato" />

    </LinearLayout>

</LinearLayout>
